...
      setLoading(true);
      const { error } = await presentPaymentSheet();
      setLoading(false);

      if (error) {
        if (error.code === 'Canceled') {
          Alert.alert('Cancelado', 'O pagamento foi cancelado. Você pode tentar novamente.');
        } else {
          Alert.alert('Erro no Pagamento', `Código: ${error.code}\n${error.message}`);
        }
      } else {
        await controller.handleCreateTickets();
      }
...

        Alert.alert(
          '🎉 Ingressos Gerados!',
          `Você recebeu ${params.quantity} ingresso(s) para o evento "${params.eventName}".Eles já estão disponíveis na sua lista de ingressos.`,
          [
            {
              text: 'OK',
              onPress: () => {
                router.replace('/user_events');
              },
            },
          ],
        );
...
